kube/ntcore/resources.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ntcore
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8180
      targetPort: 8180
  selector:
    app: ntcore

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ntcore
  labels:
    app: ntcore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntcore
  template:
    metadata:
      labels:
        app: ntcore
    spec:
      volumes:
        - name: ntcore-global
          configMap:
            name: ntcore-global
        - name: ntcore-kubernetes
          configMap:
            name: ntcore-kubernetes
      containers:
        - name: ntcore
          image: ntcore/webserver:latest
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8180
          volumeMounts:
            - name: ntcore-global
              mountPath: /usr/src/app/app-config/global
            - name: ntcore-kubernetes
              mountPath: /usr/src/app/app-config/kubernetes

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:  
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "5000m"
  name: ntcore
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ntcore
            port:
              number: 8180

---
apiVersion: v1
kind: Service
metadata:
  name: ingress-controller-ingress-nginx-controller
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: web
      port: 80
